# move

./: .gitattributes  Cargo.toml  x.toml
crates/workspace-hack/: Cargo.toml
devtools/x/: Cargo.toml
devtools/x/src/: bench.rs  build.rs  cargo.rs  check.rs  clippy.rs  config.rs  context.rs  fix.rs  lib.rs  main.rs  nextest.rs  test.rs
language/evm/exec-utils/: Cargo.toml
language/evm/move-to-yul/: Cargo.toml
language/evm/move-to-yul/src/: options.rs
language/move-analyzer/: Cargo.toml
language/move-analyzer/editors/code/: package-lock.json  package.json
language/move-analyzer/editors/code/src/: context.ts
language/move-analyzer/editors/code/tests/: index.ts
language/move-analyzer/editors/code/tests/lsp-demo/: Move.toml
language/move-analyzer/src/: symbols.rs
language/move-binary-format/src/: errors.rs  file_format.rs  serializer.rs
language/move-command-line-common/src/: character_sets.rs
language/move-compiler/: Cargo.toml
language/move-compiler/src/command_line/: compiler.rs
language/move-compiler/src/shared/: mod.rs
language/move-compiler/src/unit_test/: filter_test_members.rs
language/move-compiler/tests/move_check/parser/: newline_crlf.move
language/move-core/types/: Cargo.toml
language/move-core/types/src/: account_address.rs  language_storage.rs  parser.rs  transaction_argument.rs  value.rs  vm_status.rs
language/move-core/types/src/unit_tests/: language_storage_test.rs
language/move-ir-compiler/: Cargo.toml
language/move-ir-compiler/transactional-tests/tests/: tests.rs
language/move-model/: Cargo.toml
language/move-model/src/: lib.rs
language/move-prover/: Cargo.toml
language/move-prover/boogie-backend/: Cargo.toml
language/move-prover/boogie-backend/src/prelude/: prelude.bpl
language/move-prover/lab/: Cargo.toml
language/move-prover/move-docgen/: Cargo.toml
language/move-prover/mutation/: Cargo.toml
language/move-prover/test-utils/: Cargo.toml
language/move-stdlib/src/natives/: bcs.rs  event.rs  hash.rs  signer.rs  vector.rs
language/move-vm/integration-tests/: Cargo.toml
language/move-vm/runtime/: Cargo.toml
language/move-vm/runtime/src/: data_cache.rs  lib.rs  loader.rs  move_vm_adapter.rs  native_functions.rs  runtime.rs
language/move-vm/test-utils/: Cargo.toml
language/move-vm/types/src/: gas_schedule.rs
language/move-vm/types/src/values/: values_impl.rs
language/testing-infra/test-generation/: Cargo.toml
language/testing-infra/transactional-test-runner/: Cargo.toml
language/testing-infra/transactional-test-runner/src/: framework.rs  tasks.rs  vm_test_harness.rs
language/tools/mirai-dataflow-analysis/: Cargo.toml
language/tools/move-bytecode-viewer/: Cargo.toml
language/tools/move-cli/: Cargo.toml
language/tools/move-cli/src/: lib.rs  main.rs
language/tools/move-cli/src/package/: cli.rs  mod.rs
language/tools/move-cli/src/sandbox/commands/: publish.rs
language/tools/move-coverage/: Cargo.toml
language/tools/move-disassembler/src/: disassembler.rs
language/tools/move-explain/: Cargo.toml
language/tools/move-package/: Cargo.toml
language/tools/move-package/src/: package_lock.rs
language/tools/move-unit-test/: Cargo.toml
language/tools/move-unit-test/src/: lib.rs
scripts/: build_web_move_cli.sh
