[package]
name = "workspace-hack"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem workspace hack"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

### BEGIN HAKARI SECTION
[dependencies]
arrayvec = { version = "0.5.2", features = ["array-sizes-33-128", "std"] }
block-buffer = { version = "0.9.0", default-features = false, features = ["block-padding"] }
bstr = { version = "0.2.17", features = ["lazy_static", "regex-automata", "serde", "serde1", "serde1-nostd", "std", "unicode"] }
byteorder = { version = "1.4.3", features = ["std"] }
bytes = { version = "1.1.0", features = ["std"] }
chrono = { version = "0.4.19", features = ["clock", "libc", "oldtime", "std", "time", "winapi"] }
clap-f595c2ba2a3f28df = { package = "clap", version = "2.34.0", features = ["ansi_term", "atty", "color", "strsim", "suggestions", "vec_map"] }
clap-7b89eefb6aaa9bf3 = { package = "clap", version = "3.1.6", features = ["atty", "clap_derive", "color", "derive", "env", "lazy_static", "std", "strsim", "suggestions", "termcolor"] }
codespan-reporting = { version = "0.11.1", default-features = false, features = ["serde", "serialization"] }
crossbeam-utils = { version = "0.8.8", features = ["lazy_static", "std"] }
indexmap = { version = "1.8.0", default-features = false, features = ["std"] }
log = { version = "0.4.16", default-features = false, features = ["serde", "std"] }
memchr = { version = "2.4.1", features = ["std", "use_std"] }
num-integer = { version = "0.1.44", default-features = false, features = ["i128", "std"] }
num-traits = { version = "0.2.14", features = ["i128", "std"] }
phf_shared = { version = "0.10.0", features = ["std", "uncased"] }
plotters = { version = "0.3.1", default-features = false, features = ["area_series", "evcxr", "histogram", "line_series", "plotters-svg", "svg_backend"] }
rand = { version = "0.8.5", features = ["alloc", "getrandom", "libc", "rand_chacha", "small_rng", "std", "std_rng"] }
rand_core = { version = "0.5.1", default-features = false, features = ["alloc", "getrandom", "std"] }
regex = { version = "1.5.5", features = ["aho-corasick", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-automata = { version = "0.1.10", features = ["regex-syntax", "std"] }
regex-syntax = { version = "0.6.25", features = ["unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
serde = { version = "1.0.136", features = ["derive", "rc", "serde_derive", "std"] }
tracing-core = { version = "0.1.23", features = ["lazy_static", "std", "valuable"] }
url = { version = "2.2.2", default-features = false, features = ["serde"] }

[build-dependencies]
memchr = { version = "2.4.1", features = ["std", "use_std"] }
phf_shared = { version = "0.10.0", features = ["std", "uncased"] }
proc-macro2-9fbad63c4bcf4a8f = { package = "proc-macro2", version = "0.4.30", features = ["proc-macro"] }
proc-macro2-dff4ba8e3ae991db = { package = "proc-macro2", version = "1.0.36", features = ["proc-macro", "span-locations"] }
quote = { version = "0.6.13", features = ["proc-macro"] }
rand = { version = "0.8.5", features = ["alloc", "getrandom", "libc", "rand_chacha", "small_rng", "std", "std_rng"] }
regex = { version = "1.5.5", features = ["aho-corasick", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-syntax = { version = "0.6.25", features = ["unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
serde = { version = "1.0.136", features = ["derive", "rc", "serde_derive", "std"] }
syn-3575ec1268b04181 = { package = "syn", version = "0.15.44", features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit"] }
syn-dff4ba8e3ae991db = { package = "syn", version = "1.0.89", features = ["clone-impls", "derive", "extra-traits", "fold", "full", "parsing", "printing", "proc-macro", "quote", "visit", "visit-mut"] }

[target.x86_64-unknown-linux-gnu.dependencies]
libc = { version = "0.2.121", features = ["std"] }

[target.x86_64-unknown-linux-gnu.build-dependencies]
libc = { version = "0.2.121", features = ["std"] }

[target.x86_64-apple-darwin.dependencies]
libc = { version = "0.2.121", features = ["std"] }

[target.x86_64-apple-darwin.build-dependencies]
libc = { version = "0.2.121", features = ["std"] }

### END HAKARI SECTION
