[package]
name = "move-core-types"
version = "0.0.3"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.2"
hex = "0.4.3"
mirai-annotations = "1.10.1"
once_cell = "1.7.2"
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
rand = "0.8.3"
ref-cast = "1.0.6"
serde = { version = "1.0.124", default-features = false }
serde_bytes = "0.11.5"
bech32 = "0.8"
schemars = {git = "https://github.com/starcoinorg/schemars", rev= "6972da92f4360e1779168bb3fe0274c521d324e2"}

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.4"
serde_json = "1.0.64"

[features]
address20 = []
default = []
fuzzing = ["proptest", "proptest-derive"]
