[package]
name = "move-cli"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "CLI frontend for the Move compiler and VM"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
difference = "2.0.0"
once_cell = "1.7.2"
serde = { version = "1.0.124", default-features = false }
serde_yaml = "0.8.17"
clap = { version = "3.1.8", features = ["derive"] }
tempfile = "3.2.0"
walkdir = "2.3.1"
codespan-reporting = "0.11.1"
itertools = "0.10.0"
bcs = "0.1.2"
move-bytecode-verifier = { path = "../../move-bytecode-verifier", optional = true}
move-disassembler = { path = "../move-disassembler"}
move-command-line-common = { path = "../../move-command-line-common"}
move-bytecode-utils = { path = "../move-bytecode-utils", optional = true}
move-coverage = { path = "../move-coverage"}
move-core-types = { path = "../../move-core/types"}
move-ir-types = { path = "../../move-ir/types", optional = true}
move-compiler = { path = "../../move-compiler" }
move-stdlib = { path = "../../move-stdlib", features = ["testing"], optional = true}
move-table-extension = { path = "../../extensions/move-table-extension", optional = true }
move-symbol-pool = { path = "../../move-symbol-pool", optional = true}
move-vm-types = { path = "../../move-vm/types", optional = true}
move-vm-runtime = { path = "../../move-vm/runtime", features = ["debugging"]}
read-write-set = { path = "../read-write-set", optional = true}
read-write-set-dynamic = { path = "../read-write-set/dynamic", optional = true}
move-resource-viewer = { path = "../move-resource-viewer", optional = true}
move-binary-format = { path = "../../move-binary-format", optional = true}
move-package = { path = "../move-package"}
move-prover = { path = "../../move-prover", optional = true}
move-unit-test = { path = "../move-unit-test", optional = true}
move-errmapgen = { path = "../../move-prover/move-errmapgen", optional = true}
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map", optional = true}
move-bytecode-viewer = { path = "../move-bytecode-viewer", optional = true }

[dev-dependencies]
datatest-stable = "0.1.1"

[[bin]]
name = "move"
path = "src/main.rs"

[[test]]
name = "sandbox_testsuite"
harness = false

[[test]]
name = "move_unit_tests_move_vm_and_stackless_vm"
harness = false     

[[test]]
name = "move_unit_tests_evm"
harness = false
required-features = ["evm-backend"]

[[test]]
name = "build_testsuite"
harness = false

[[test]]
name = "build_testsuite_evm"
harness = false
required-features = ["evm-backend"]

[features]
evm-backend = ["move-unit-test/evm-backend", "move-package/evm-backend"]
address20 = ["move-stdlib/address20"]
address32 = ["move-stdlib/address32"]
table-extension = ["move-table-extension", "move-unit-test/table-extension"]
no_web = ["move-bytecode-verifier", "move-bytecode-utils", "move-ir-types", "move-stdlib", 
    "move-symbol-pool", "move-vm-types", "read-write-set", "read-write-set-dynamic", "move-resource-viewer", 
    "move-binary-format", "move-prover", "move-unit-test", "move-errmapgen", "move-bytecode-source-map", "move-bytecode-viewer"]
default = ["no_web"]
